--- a/debian/rules
+++ b/debian/rules
@@ -65,7 +65,7 @@ UPVERSION:=$(shell echo $(DEBVERSION) | sed -e 's/^.*://' -e 's/-[0-9.]*$$//' -e
 UPNAME := icmake
 UPFILE := $(UPNAME)_$(UPVERSION).tar.gz
 DEFILE := $(UPNAME)_$(UPVERSION).orig.tar.gz
-URL		   := https://www.icce.rug.nl/debian/icmake
+URL                := https://www.icce.rug.nl/debian/icmake
 MD5CURRENT := `md5sum ../tarballs/$(DEFILE) | sed -e 's/ .*//'`
 SVNTRUNK   := https://svn.sourceforge.net/svnroot/bisoncpp/trunk/icmake
 
@@ -74,33 +74,60 @@ get-orig-source:
 	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
 
 	-@if [ ! -f ../tarballs/$(DEFILE) ] ; then \
-			echo -e "Downloading $(URL)/$(UPFILE)\nSaving into ../tarballs/$(DEFILE) ..." ; \
-			wget --no-check-certificate --quiet -N -nv -T20 -t3 -O \
-					 ../tarballs/$(DEFILE) $(URL)/$(UPFILE) ; \
+	    echo -e "Downloading $(URL)/$(UPFILE)\nSaving into ../tarballs/$(DEFILE) ..." ; \
+	    wget --no-check-certificate --quiet -N -nv -T20 -t3 -O \
+		    ../tarballs/$(DEFILE) $(URL)/$(UPFILE) ; \
 	else \
-			echo "Upstream source tarball has been already downloaded" ; \
+	    echo "Upstream source tarball has been already downloaded" ; \
 	fi
 
 	-@if [ "$(MD5CURRENT)" != "$(MD5TRUSTED)" ] ; then \
-			echo "Expecting upstream filename md5sum $(MD5TRUSTED), but $(MD5CURRENT) found" ; \
-			echo "Upstream filename md5sum is NOT trusted! Possible upstream filename forge!" ; \
-			false ; \
+	    echo "Expecting upstream filename md5sum $(MD5TRUSTED), but $(MD5CURRENT) found" ; \
+	    echo "Upstream filename md5sum is NOT trusted! Possible upstream filename forge!" ; \
+	    false ; \
 	else \
-			echo "Upstream filename md5sum is trusted!" ; \
+	    echo "Upstream filename md5sum is trusted!" ; \
 	fi
 
-get-svn-trunk:
-	@@dh_testdir
-	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
-	rm -rf ../tarballs/$(DEFILE) ../tarballs/icmake-svn-trunk
-	svn --force export $(SVNTRUNK) ../tarballs/icmake-svn-trunk
-	@@if [ -d ../tarballs/icmake-svn-trunk/debian ] ; then rm -rf ../tarballs/icmake-svn-trunk/debian; fi
-	@@ echo Building the SVN TRUNK tarball in ../tarballs/$(DEFILE)
-	@@GZIP=-9 tar -b1 -czf ../tarballs/$(DEFILE) -C ../tarballs icmake-svn-trunk
-	rm -rf ../tarballs/icmake-svn-trunk
+# call git-build from the project's base directory as `fakeroot debian/rules git-build'
+# it creates the ./build-area and runs dpkg-buildpackage in build-area/$(UPNAME)-$(UPVERSION)
+# which, if successful, creates the debian files in the build-area
+# Probably easier to use is `git-bl'
+git-build:
+	@@[ -d ./build-area/. ]||mkdir -p ./build-area
+
+	-@if [ ! -f ../tarballs/$(DEFILE) ] ; then \
+	    echo "Upstream source tarball ../tarballs/$(DEFILE) not found" ; \
+	else \
+	    rm -rf build-area/$(UPNAME)-$(UPVERSION) build-area/run.lintian ; \
+	    cp ../tarballs/$(DEFILE) build-area ; \
+	    chdir build-area ; \
+	    tar xzf $(DEFILE) ; \
+	    cp -r ../debian $(UPNAME)-$(UPVERSION) ; \
+	    chdir $(UPNAME)-$(UPVERSION) ; \
+	    dpkg-buildpackage $(DPKG_BUILDPACKAGE) ; \
+	    if [ "$$?" -eq 0 ] ; then \
+	        chdir .. ; \
+	        touch run.lintian ; \
+	        rm -rf $(UPNAME)-$(UPVERSION) ; \
+	    else \
+	        chdir .. ; \
+	        mv $(UPNAME)-$(UPVERSION) $(UPNAME)-$(UPVERSION)-obsolete-`date +%s` ; \
+	    fi \
+	fi
+
+#get-svn-trunk:
+#       @@dh_testdir
+#       @@[ -d ../tarballs/. ]||mkdir -p ../tarballs
+#       rm -rf ../tarballs/$(DEFILE) ../tarballs/icmake-svn-trunk
+#       svn --force export $(SVNTRUNK) ../tarballs/icmake-svn-trunk
+#       @@if [ -d ../tarballs/icmake-svn-trunk/debian ] ; then rm -rf ../tarballs/icmake-svn-trunk/debian; fi
+#       @@ echo Building the SVN TRUNK tarball in ../tarballs/$(DEFILE)
+#       @@GZIP=-9 tar -b1 -czf ../tarballs/$(DEFILE) -C ../tarballs icmake-svn-trunk
+#       rm -rf ../tarballs/icmake-svn-trunk
 
 print-version:
-	@@echo "Debian version:	$(DEBVERSION)"
+	@@echo "Debian version: $(DEBVERSION)"
 	@@echo "Upstream version: $(UPVERSION)"
 
 binary: binary-arch binary-indep
